--- a/src/css/Movie.css
+++ b/src/css/Movie.css
@@ -14,6 +14,12 @@
 }
 
 @media(width < 426px){
+    .movieGetAll{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
     .getAllBloc{
         display: flex;
         flex-direction: column;
