--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ body {
   background-color: #FC8600;
 }
 
+.whiteBackground{
+  background-color: white;
+}
+
 /** CSS Générique entre les pages **/
 
 .divBox{
@@ -41,6 +45,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgba(255, 231, 77, 0.5);
 }
 
 .entireBox{
