--- a/src/components/ProjectCard/projectcard.css
+++ b/src/components/ProjectCard/projectcard.css
@@ -10,6 +10,11 @@
     border-radius: 20px;
 }
 
+.projectCard:hover{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    transition: box-shadow 0.30s ease-in-out;
+}
+
 .projectCardBox{
     width: 100%;
     height: 100%;
