--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 .tertiary{
-  color: #FC8600;
+  color: #FFA033;
 }
 
 .primaryBackground{
@@ -31,7 +31,7 @@ body {
 }
 
 .tertiaryBackground{
-  background-color: #FC8600;
+  background-color: #FFA033;
 }
 
 .whiteBackground{
@@ -82,7 +82,6 @@ body {
   width: 700px;
 }
 
-
 /** CSS Bouton Génération Citation / Livre / Film **/
 .generateButton{
   border: 2px solid black;
@@ -98,6 +97,21 @@ body {
 
 .generateButton:hover{
   cursor: pointer;
+}
+
+/* Bouton Back to the top Portfolio & Movie */
+.backToTop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  width: 45px;
+  height: 45px;
+  font-size: 20px;
+  border-radius: 15px;
+  position: fixed;
+  bottom: 40px;
+  right: 20px;
 }
 
 /* Version Mobile & Tablette */
